fix button not going back fix canvas getting stretched move canvas left fix button and slider mooshing together

--- a/e/geometry/style.css
+++ b/e/geometry/style.css
@@ -10,9 +10,8 @@ body {
 
 canvas {
     position: absolute;
-    width: 75%;
     height: 75%;
-    left: 5%;
+    left: 1.5%;
     top: 10%;
     max-width: 800px;
     max-height: 800px;
@@ -76,13 +75,13 @@ canvas {
 #sideCount {
     position: relative;
     text-align: center;
-    top: -20%;
+    top: -10%;
 }
 
 #optionsContainer {
     top: 2%;
     position: relative;
-    left: 10%;
+    left: 0.25%;
     height: 10%;
     display: flex;
     align-items: center;
